<resources>

    <string name="app_name">SC</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sc">Sc</string>

    <string name="salary">请输入您的工资</string>
    <string name="salary_after">您的税后工资是</string>
    <string name="calculate">开始计算</string>
    <string name="pay_base_dis">缴纳基数￥:</string>
    <string name="social_security_dis">社保</string>
    <string name="public_fund_dis">公积金</string>
    <string name="pay_rate">缴纳比例:</string>
    <string name="company_rate">公司缴纳</string>
    <string name="personal_rate">个人缴纳</string>
    <string name="pension_dis">养老:</string>
    <string name="medical_insurance_dis">医疗:</string>
    <string name="unemployment_insurance_dis">失业:</string>
    <string name="industrial_injury_dis">工伤:</string>
    <string name="maternity_dis">生育:</string>
    <string name="public_fund_ins_dis">公积金:</string>
    <string name="tax_dis">个税缴纳:</string>
    <string name="company_paid_dis">公司共缴纳:</string>
    <string name="personal_paid_dis">个人共缴纳:</string>

    <string name="input_error">只能输入数字哦</string>


</resources>